--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,7 @@ on:
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
 jobs:
   bump-version:
@@ -24,7 +23,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '18'
-          registry-url: 'https://npm.pkg.github.com'
           scope: '@logikaljay'
 
       - run: npm ci
