chore: set package registry back to github

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "@5oo/scaf",
-  "private": false,
+  "name": "@logikaljay/scaf",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
