--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,8 @@ on:
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  NPM_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-  NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+  NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   bump-version:
@@ -24,7 +24,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '18'
-          scope: '@5oo'
+          registry: npm.pkg.github.com
+          scope: '@logikaljay'
 
       - run: npm ci
       - run: npm run build
