--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@logikaljay/scaf",
+  "bin": {
+    "scaf": "./bin/scaf"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": ["dist"],
+  "license": "MIT",
   "exports": {
     ".": {
       "require": "./dist/index.js",
@@ -21,8 +25,7 @@
     "clean": "rm -rf node_modules && rm -rf dist"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "logikaljay",
   "devDependencies": {
     "@types/node": "^18.16.2",
     "@types/prompt": "^1.1.5",
