--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@logikaljay/scaf",
   "bin": {
-    "scaf": "./bin/scaf"
+    "@logikaljay/scaf": "./bin/scaf"
   },
   "version": "1.0.0",
   "description": "",
