fix: publish to npm

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,11 +4,12 @@ on:
   push:
     branches:
       - "master"
+  workflow_dispatch:
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 jobs:
   bump-version:
@@ -24,8 +25,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '18'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@logikaljay'
 
       - run: npm ci
       - run: npm run build
